force-app/main/default/objects/Course__c/fields/Course_Level__c.field-meta.xml
<CustomField>
    <fullName>Course_Level__c</fullName>
    <label>Course Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Introductory</fullName><default>false</default><label>Introductory</label></value>
            <value><fullName>Advanced</fullName><default>false</default><label>Advanced</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>